<resources>
    <string name="app_name">GamingNewZ</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- Header del Navigation Drawer -->
    <string name="nav_header_title">Lucina</string>
    <string name="nav_header_subtitle">Great Lord</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="news">Ultimas Noticias</string>
    <string name="games">Juegos</string>
    <string name="games1">League of Legends</string>
    <string name="games2">Dota</string>
    <string name="games3">CSGO</string>
    <string name="settings">Configuracion</string>
    <string name="favorites">Favoritos</string>
    <string name="noticias">Noticias</string>
    <string name="otros">Otros</string>
    <string name="name_new">name new</string>
    <string name="news_title">News Title</string>
    <string name="info">Info</string>
    <string name="sign_in">Sign in</string>
    <string name="password">Password</string>
    <string name="title_activity_lol">Lol</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="opciones">Opciones</string>
    <string name="logout">Logout</string>
    <string name="welcome">Welcome!</string>
    <string name="titulo">Titulo</string>
    <string name="fecha">Fecha</string>
    <string name="fecha_noticia">Fecha Noticia</string>
    <string name="juego">Juego</string>
    <string name="descripcion">Descripcion</string>
    <string name="body">body</string>
    <string name="noticias_principales">Noticias Principales</string>
    <string name="top_jugadores">Top Jugadores</string>
    <string name="imagenes">Imagenes</string>
    <string name="name">name</string>
    <string name="biography">biography</string>
    <string name="overwatch">Overwatch</string>
    <string name="fifa">fifa</string>
    <string name="welcomep">Welcome Back!</string>
    <string name="userp">User</string>
    <string name="title_activity_more_info_players">MoreInfoPlayers</string>
    <string name="biografia">Biografia</string>
    <string name="juego_nombre">Juego_nombre</string>
    <string name="notice">Te traemos las noticias a la palma de la mano</string>
    <string name="gamingnewz">GamingNewZ</string>


</resources>
