<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/news"
            android:icon="@drawable/ic_new_releases_black_24dp"
            android:title="@string/news" />
        <item
            android:id="@+id/games"
            android:icon="@drawable/ic_stars_black_24dp"
            android:title="@string/games" />
        <item
            android:id="@+id/settings"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/settings" />
        <item
            android:id="@+id/favorites"
            android:icon="@drawable/ic_favorite_black_24dp"
            android:title="@string/favorites" />

    </group>


</menu>
